--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,13 @@
-# Application name
 spring.application.name=demo
-
-# Server port
 server.port=9002
-server.forward-headers-strategy=framework
 
-# H2 Database configuration (in-memory)
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+# H2 Database configuration
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA / Hibernate configuration
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-# Initialize data (optional if you have import.sql or schema.sql in resources)
-spring.sql.init.mode=always
-spring.sql.init.platform=h2
-spring.sql.init.encoding=UTF-8
