--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
+# Application name
 spring.application.name=demo
-server.port=9002
 
-# H2 Database configuration
+# Server settings
+server.port=9002
+server.forward-headers-strategy=framework
+
+# H2 in-memory database
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
